# parsing-tutorial

./: CMakeLists.txt  README.md
sources/: CMakeLists.txt  evaluation.cpp  evaluation.h  exceptions.h  lexer.cpp  lexer.h  main.cpp  node.h  parser.cpp  parser.h  token.h  utility.cpp  utility.h
tests/: CMakeLists.txt  testEvaluation.hpp  testLexer.cpp  testLexer.hpp  testMain.cpp  testNode.hpp  testParser.hpp
